Bug 1016196 - Patch 1/2: Add Promise support in BluetoothReplyRunnable, r=echou