dom/bluetooth2/BluetoothReplyRunnable.cpp
@@ -8,12 +8,17 @@
 #include "BluetoothReplyRunnable.h"
 #include "DOMRequest.h"
 #include "mozilla/dom/bluetooth/BluetoothTypes.h"
+#include "mozilla/dom/Promise.h"
 #include "nsServiceManagerUtils.h"
+
+using namespace mozilla::dom;
 
 USING_BLUETOOTH_NAMESPACE
 
-BluetoothReplyRunnable::BluetoothReplyRunnable(nsIDOMDOMRequest* aReq)
+BluetoothReplyRunnable::BluetoothReplyRunnable(nsIDOMDOMRequest* aReq,
+                                               Promise* aPromise)
   : mDOMRequest(aReq)
+  , mPromise(aPromise)
 {}
 
 void
@@ -26,35 +31,58 @@ void
 BluetoothReplyRunnable::ReleaseMembers()
 {
   mDOMRequest = nullptr;
+  mPromise = nullptr;
 }
 
 BluetoothReplyRunnable::~BluetoothReplyRunnable()
 {}
 
 nsresult
-BluetoothReplyRunnable::FireReply(JS::Handle<JS::Value> aVal)
+BluetoothReplyRunnable::FireReplySuccess(JS::Handle<JS::Value> aVal)
 {
-  NS_ENSURE_TRUE(mDOMRequest, NS_OK);
+  MOZ_ASSERT(mReply->type() == BluetoothReply::TBluetoothReplySuccess);
 
-  nsCOMPtr<nsIDOMRequestService> rs =
-    do_GetService(DOMREQUEST_SERVICE_CONTRACTID);
-  NS_ENSURE_TRUE(rs, NS_ERROR_FAILURE);
+  // DOMRequest
+  if (mDOMRequest) {
+    nsCOMPtr<nsIDOMRequestService> rs =
+      do_GetService(DOMREQUEST_SERVICE_CONTRACTID);
+    NS_ENSURE_TRUE(rs, NS_ERROR_FAILURE);
 
-  return mReply->type() == BluetoothReply::TBluetoothReplySuccess ?
-    rs->FireSuccessAsync(mDOMRequest, aVal) :
-    rs->FireErrorAsync(mDOMRequest, mReply->get_BluetoothReplyError().error());
+    return rs->FireSuccessAsync(mDOMRequest, aVal);
+  }
+
+  // Promise
+  if (mPromise) {
+    mPromise->MaybeResolve(aVal);
+  }
+
+  return NS_OK;
 }
 
 nsresult
 BluetoothReplyRunnable::FireErrorString()
 {
-  NS_ENSURE_TRUE(mDOMRequest, NS_OK);
+  // DOMRequest
+  if (mDOMRequest) {
+    nsCOMPtr<nsIDOMRequestService> rs =
+      do_GetService(DOMREQUEST_SERVICE_CONTRACTID);
+    NS_ENSURE_TRUE(rs, NS_ERROR_FAILURE);
 
-  nsCOMPtr<nsIDOMRequestService> rs =
-    do_GetService("@mozilla.org/dom/dom-request-service;1");
-  NS_ENSURE_TRUE(rs, NS_ERROR_FAILURE);
+    return rs->FireErrorAsync(mDOMRequest, mErrorString);
+  }
 
-  return rs->FireErrorAsync(mDOMRequest, mErrorString);
+  // Promise
+  if (mPromise) {
+    /**
+     * Always reject with NS_ERROR_DOM_OPERATION_ERR.
+     *
+     * TODO: Return actual error result once bluetooth backend wraps
+     *       nsresult instead of error string.
+     */
+    mPromise->MaybeReject(NS_ERROR_DOM_OPERATION_ERR);
+  }
+
+  return NS_OK;
 }
 
 NS_IMETHODIMP
@@ -63,35 +91,37 @@ BluetoothReplyRunnable::Run()
   MOZ_ASSERT(NS_IsMainThread());
   MOZ_ASSERT(mReply);
 
-  nsresult rv;
-
   AutoSafeJSContext cx;
   JS::Rooted<JS::Value> v(cx, JSVAL_VOID);
 
+  nsresult rv;
   if (mReply->type() != BluetoothReply::TBluetoothReplySuccess) {
-    rv = FireReply(v);
+    SetError(mReply->get_BluetoothReplyError().error());
+    rv = FireErrorString();
+  } else if (!ParseSuccessfulReply(&v)) {
+    rv = FireErrorString();
   } else {
-    if (!ParseSuccessfulReply(&v)) {
-      rv = FireErrorString();
-    } else {
-      rv = FireReply(v);
-    }
+    rv = FireReplySuccess(v);
   }
 
   if (NS_FAILED(rv)) {
-    BT_WARNING("Could not fire DOMRequest!");
+    BT_WARNING("Could not fire DOMRequest/Promise!");
   }
 
   ReleaseMembers();
   MOZ_ASSERT(!mDOMRequest,
-             "mDOMRequest still alive! Deriving class should call "
+             "mDOMRequest is still alive! Deriving class should call "
+             "BluetoothReplyRunnable::ReleaseMembers()!");
+  MOZ_ASSERT(!mPromise,
+             "mPromise is still alive! Deriving class should call "
              "BluetoothReplyRunnable::ReleaseMembers()!");
 
   return rv;
 }
 
-BluetoothVoidReplyRunnable::BluetoothVoidReplyRunnable(nsIDOMDOMRequest* aReq)
-  : BluetoothReplyRunnable(aReq)
+BluetoothVoidReplyRunnable::BluetoothVoidReplyRunnable(nsIDOMDOMRequest* aReq,
+                                                       Promise* aPromise)
+  : BluetoothReplyRunnable(aReq, aPromise)
 {}
 
 BluetoothVoidReplyRunnable::~BluetoothVoidReplyRunnable()
