dom/bluetooth2/BluetoothReplyRunnable.h
@@ -14,6 +14,12 @@
 
 class nsIDOMDOMRequest;
 
+namespace mozilla {
+namespace dom {
+class Promise;
+}
+}
+
 BEGIN_BLUETOOTH_NAMESPACE
 
 class BluetoothReply;
@@ -23,7 +29,8 @@ class BluetoothReplyRunnable : public nsRunnable
 public:
   NS_DECL_NSIRUNNABLE
 
-  BluetoothReplyRunnable(nsIDOMDOMRequest* aReq);
+  BluetoothReplyRunnable(nsIDOMDOMRequest* aReq,
+                         Promise* aPromise = nullptr);
 
   void SetReply(BluetoothReply* aReply);
 
@@ -45,25 +52,33 @@ protected:
   nsAutoPtr<BluetoothReply> mReply;
 
 private:
-  nsresult FireReply(JS::Handle<JS::Value> aVal);
+  nsresult FireReplySuccess(JS::Handle<JS::Value> aVal);
   nsresult FireErrorString();
 
   /**
-   * mDOMRequest is nullptr for internal IPC that require no DOMRequest,
-   * e.g., GetAdaptersTask triggered by BluetoothManager
+   * Either mDOMRequest or mPromise is not nullptr to reply applications
+   * success or error string. One special case is internal IPC that require
+   * neither mDOMRequest nor mPromise to reply applications.
+   * E.g., GetAdaptersTask triggered by BluetoothManager
+   *
+   * TODO: remove mDOMRequest once all methods adopt Promise.
    */
   nsCOMPtr<nsIDOMDOMRequest> mDOMRequest;
+  nsRefPtr<Promise> mPromise;
+
   nsString mErrorString;
 };
 
 class BluetoothVoidReplyRunnable : public BluetoothReplyRunnable
 {
 public:
-  BluetoothVoidReplyRunnable(nsIDOMDOMRequest* aReq);
+  BluetoothVoidReplyRunnable(nsIDOMDOMRequest* aReq,
+                             Promise* aPromise = nullptr);
  ~BluetoothVoidReplyRunnable();
 
 protected:
-  virtual bool ParseSuccessfulReply(JS::MutableHandle<JS::Value> aValue) MOZ_OVERRIDE
+  virtual bool
+  ParseSuccessfulReply(JS::MutableHandle<JS::Value> aValue) MOZ_OVERRIDE
   {
     aValue.setUndefined();
     return true;
